<?xml version="1.0"?>
<package format="2">
  <name>record_run</name>
  <version>0.0.0</version>
  <description>The record_run package</description>
  <maintainer email="s1126017jn@s.chibakoudai.jp">Masashi Uehara</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pimouse_ros</run_depend>
</package>
